# pairs-trading-research

./: .gitignore  README.md  pyproject.toml
config/: backtest.yaml  universe.yaml
notebooks/: 01_single_pair_diagnostics.ipynb  02_walk_forward_results.ipynb
reports/: final_report.md  single_pair_metrics.csv  walk_forward_metrics.csv  walk_forward_selected_pairs.csv  walk_forward_window_metrics.csv
src/pairs_trading/: __init__.py  backtest.py  data.py  metrics.py  pair_selection.py  pipeline.py  preprocessing.py  signals.py  statistics.py  visualization.py
tests/: test_backtest.py  test_preprocessing.py  test_signals.py  test_statistics.py  test_walk_forward.py
