[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pairs-trading-research"
version = "0.1.0"
description = "ETF pairs trading research pipeline with cointegration, walk-forward validation, and cost-aware backtesting."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "statsmodels>=0.14",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
